# ParallelProgramming

operating_systems/slugs_on_leaf/: CMakeLists.txt
operating_systems/slugs_on_leaf/src/: ExecutionManager.cpp  ExecutionManager.h  SlugManager.cpp  SlugManager.h  main.cpp
operating_systems/slugs_on_leaf/src/assets/: Leaf.cpp  Leaf.h  Slug.cpp  Slug.h
operating_systems/slugs_on_leaf/src/helpers/: Randomizer.cpp  Randomizer.h
operating_systems/slugs_on_leaf/src/ncurses/: Drawer.cpp  Drawer.h
